# kmax_web

./: .gitignore  README.md  docker-compose.yml
.agents/skills/testing-kmax-web-scaffold/: SKILL.md
.github/workflows/: ci.yml
backend/: .env.example  manage.py  pyproject.toml
backend/core/: urls.py  views.py
backend/kmax_web/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/knowledge/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/knowledge/migrations/: 0001_initial.py
docs/: development.md
frontend/: eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  styles.css
frontend/src/router/: index.ts
frontend/src/stores/: health.ts  knowledgeBases.ts
frontend/src/views/: HomeView.vue  KnowledgeBaseCreateView.vue  KnowledgeBaseListView.vue
