[project]
name = "kmax-web-backend"
version = "0.1.0"
description = "Django API scaffold for the kmax_web RAG platform."
requires-python = ">=3.11"
dependencies = [
  "Django>=5.2,<6.0",
  "celery>=5.5,<6.0",
  "django-cors-headers>=4.7,<5.0",
  "django-redis>=6.0,<7.0",
  "djangorestframework>=3.16,<4.0",
  "drf-spectacular>=0.28,<1.0",
  "gunicorn>=23.0,<24.0",
  "psycopg[binary]>=3.2,<4.0",
  "python-dotenv>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.13,<1.0",
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kmax_web", "core"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "DJ"]
ignore = ["DJ001"]
